styles/custom.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700");

body {
  /* override bootstrap.css values */
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
}

/* override bootstrap.css font-weight (was 500), colors, margins */
h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-weight: 600;
  color: #555;
  margin-top: 30px
}
h1,.h1 {
  color: #444;	
}
h4,h5,h6,
.h4,.h5,.h6 {
	margin-top: 18px;
}

.hr {
	display: block;
	position: relative;
	padding: 0;
	margin: 8px auto;
	width: 100%;
	clear: both;
	border: none;
	border-top: 2px solid #AAA;
	border-bottom: 2px solid #FFF;
	font-size: 1px;
	line-height: 0;
	overflow: visible;
}

.logo-inline {
	display:inline-block;
	float:left;
	margin-right:7%;
	padding-bottom: 15px
}

blockquote {
	background-color: #FFEEEE;
	border: 1px solid #FFDDDD;
	font-size: 1em;
	/* font-style: italic; */
}

.critical {
	background-color: lightyellow;
	border: 1px solid red;
	padding: 4px;
}

/* This is to make <code> and <em> look the same because our markdown code on the site uses *xxx* -> <em>xxx<em> to indicate code
   but our html code uses the <code> tag.  So we want to make them look the same (for now)
   If we update the markdown to use `xxx` instead of *xxx* it might be better but way too much work for now. */
/* code, em {
	font-size: .9em;
    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	font-style: normal;
	color: #c7254e;
	background-color: #f9f2f4;
}
*/

/* needed because something in either bootstrap or jasny-bootstrap really kill table formatting. */

table {
	padding: 0;
	margin-bottom: 14px; }
table tr {
	border-top: 1px solid #cccccc;
	background-color: white;
	margin: 0;
	padding: 0; }
table tr:nth-child(2n) {
	background-color: #f8f8f8; }
table tr th {
	font-weight: bold;
	border: 1px solid #cccccc;
	text-align: left;
	margin: 0;
	padding: 6px 13px; }
table tr td {
	border: 1px solid #cccccc;
	text-align: left;
	margin: 0;
	padding: 6px 13px; }
table tr th :first-child, table tr td :first-child {
	margin-top: 0; }
table tr th :last-child, table tr td :last-child {
	margin-bottom: 0; }


/* formatting for line numbers in code blocks */

table.highlighttable tr {
    border: 0;
}
table.highlighttable tr td {
    border: 0;
    padding: 0;
}
div.linenodiv pre {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-right-style: dotted;
    color: #aaaaaa;
}
table.highlighttable div.highlight pre {
    border-left: 0;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}
 
/* footer at the bottom of the content container */

#content-footer {
    display:flex;
    position: relative;
    left: -15px;
    width: 102%;
    height: 30px;
    color:#eeeeee;
    text-align: center;
}
#content-footer div {
    margin:auto;
}

